Chatbox, Profile page

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8" />
         <link rel="icon"
-            href="%PUBLIC_URL%/favicon.ico" />
+            href="%PUBLIC_URL%/images/logo.png" />
         <meta name="viewport"
             content="width=device-width, initial-scale=1" />
         <meta name="theme-color"
@@ -17,7 +17,7 @@
         <link rel="manifest"
             href="%PUBLIC_URL%/manifest.json" />
 
-        <title>React App</title>
+        <title>Bilbytt</title>
         <script src="https://kit.fontawesome.com/5cbfd0d562.js"
             crossorigin="anonymous"></script>
     </head>
