--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8" />
         <link rel="icon"
-            href="%PUBLIC_URL%/images/logo.png" />
+            href="%PUBLIC_URL%/images/logo1.png" />
         <meta name="viewport"
             content="width=device-width, initial-scale=1" />
         <meta name="theme-color"
@@ -20,6 +20,13 @@
         <title>Bilbytt</title>
         <script src="https://kit.fontawesome.com/5cbfd0d562.js"
             crossorigin="anonymous"></script>
+        <link rel="preconnect"
+            href="https://fonts.googleapis.com">
+        <link rel="preconnect"
+            href="https://fonts.gstatic.com"
+            crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Oxygen:wght@300;400;700&display=swap"
+            rel="stylesheet">
     </head>
 
     <body>
